# node-fdm

./: .gitignore  404.html  README.md  config.py  index.html  mkdocs-dev.yml  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs-ghpages.yml  publish.yml  test.yml  test_and_doc.yml  test_package.yml
code/: 01_aircraft_list.py  02_download_data.py  03_preprocess_data.py  04_weather_spd_process_data.py  05_training.py  06_flight_prediction.py  07_bada_prediction.py  08_visualize_predictions.py  09_performance_aggregation.py  10_dataset_stats.py  12_performance.py  13_example_flight.py  97_explore_dataset.py  98_example_flight.py  99_performance.py
code/opensky/: 01_aircraft_list.py  02_download_data.py  03_preprocess_data.py  04_weather_spd_process_data.py  05_training.py  06_flight_prediction.py  07_bada_prediction.py  08_visualize_predictions.py  09_performance_aggregation.py  10_dataset_stats.py  11_explore_dataset.py  12_performance.py  13_example_flight.py  config.yaml
code/qar/: 01_dataloader.py  01_training.py  02_inference.py  config.yaml
concepts/: index.html
css/: extra.css
data/: aircraft_db.csv  example.parquet  performance.parquet
docs/: index.md
docs/concepts/: index.md
docs/guide/: installation.md  quickstart.md  workflows.md
docs/howto/: configure_params.md  contribute.md  create_architecture.md  run_inference.md  train_model.md
docs/quickstart/: concepts.md  installation.md  pipelines.md
docs/reference/: architectures.md  data.md  models.md  node_fdm.md  ode_trainer.md  predictor.md
guide/installation/: index.html
guide/quickstart/: index.html
howto/configure_params/: index.html
howto/contribute/: index.html
howto/create_architecture/: index.html
howto/run_inference/: index.html
howto/train_model/: index.html
joss/: paper.bib  paper.md
models/opensky_2025/opensky_A20N/: training_losses.csv
models/opensky_2025/opensky_A21N/: training_losses.csv
models/opensky_2025/opensky_A319/: trajectory.pt
models/opensky_2025/opensky_A320/: trajectory.pt
models/opensky_2025/opensky_A321/: meta.json  training_losses.csv
models/opensky_2025/opensky_A333/: meta.json
models/opensky_2025/opensky_A359/: data_ode.pt
models/opensky_2025/opensky_AT76/: meta.json  trajectory.pt
models/opensky_2025/opensky_B38M/: training_losses.csv
models/opensky_2025/opensky_B738/: training_losses.csv
models/opensky_2025/opensky_E190/: meta.json
models/opensky_A20N/: trajectory.pt
models/opensky_A21N/: data_ode.pt  trajectory.pt
models/opensky_A319/: training_losses.csv
models/opensky_A320/: data_ode.pt  meta.json  training_losses.csv
models/opensky_A321/: data_ode.pt
models/opensky_A333/: data_ode.pt  training_losses.csv
models/opensky_A359/: meta.json
models/opensky_AT76/: training_losses.csv
models/opensky_B38M/: meta.json  trajectory.pt
models/opensky_B738/: meta.json
models/opensky_E190/: training_losses.csv
models/qar_A320/: angle.pt  data_ode.pt  engine.pt  meta.json  training_losses.csv  trajectory.pt
node_fdm/: __init__.py  _version.py  ode_trainer.py  predictor.py
node_fdm/architectures/: mapping.py
node_fdm/architectures/opensky_2025/: __init__.py  columns.py  (+3 more)
node_fdm/data/: __init__.py  dataset.py  flight_processor.py  loader.py
node_fdm/models/: batch_neural_ode.py  flight_dynamics_model.py  flight_dynamics_model_prod.py
preprocessing/: __init__.py  meteo_and_parameters.py  split.py
pybada_predictor/: __init__.py  aircraft_mapping.py  predictor.py  utils.py
quickstart/concepts/: index.html
quickstart/installation/: index.html
quickstart/pipelines/: index.html
reference/architectures/: index.html
reference/data/: index.html
reference/models/: index.html
reference/node_fdm/: index.html
reference/ode_trainer/: index.html
reference/predictor/: index.html
scripts/opensky/: 03_preprocess_data.py  04_weather_spd_process_data.py  05_training.py  06_flight_prediction.py  07_bada_prediction.py  08_visualize_predictions.py  09_performance_aggregation.py  12_performance.py  13_example_flight.py  config.yaml
scripts/pybada_predictor/: predictor.py
scripts/qar/: 01_training.py  02_inference.py
search/: search_index.json
src/node_fdm/: _version.py  ode_trainer.py
utils/data/: column.py  conversions.py  dataframe_wrapper.py  unit.py
utils/learning/: loss.py
utils/physics/: constants.py  torch.py  units.py
(+66 files in other folders)
